import VirtualThreadPerTaskExecutor and remove @Async, clean code with try-with-resources